fix: set word-wrap to prevent overflow

--- a/crates/toothpaste-frontend/index.css
+++ b/crates/toothpaste-frontend/index.css
@@ -105,3 +105,7 @@ pre {
   @apply dark:bg-gray-800;
   @apply whitespace-break-spaces;
 }
+
+pre span {
+  word-wrap: break-word;
+}
